syntax = "proto3";

package ecliptix.proto.membership;
option csharp_namespace = "Ecliptix.Protobuf.Membership";
import "google/protobuf/timestamp.proto";

message Membership {
  bytes unique_identifier = 1;

  enum ActivityStatus {
    ACTIVE = 0;
    INACTIVE = 1;
  }

  enum CreationStatus {
    OTP_VERIFIED = 0;
    SECURE_KEY_SET = 1;
    PASSPHRASE_SET = 2;
  }

  ActivityStatus status = 3;
  optional CreationStatus creation_status = 4;
}

message OprfRegistrationInitRequest {
  bytes peer_oprf = 1;
  bytes membership_identifier = 2;
}

message OprfRegistrationInitResponse   {
  bytes peer_oprf = 1;

  enum UpdateResult {
    SUCCEEDED = 0;
    INVALID_CREDENTIALS = 1;
  }

  UpdateResult result = 2;
  optional string message = 3;
  optional Membership membership = 4;
}

message OprfRegistrationCompleteRequest {
  bytes peer_registration_record = 1;
  bytes membership_identifier = 2;
}

message OprfRegistrationCompleteResponse {
  enum RegistrationResult {
    SUCCEEDED = 0;
  }
  
  RegistrationResult result = 1;
  optional string message = 2;
}

message OprfRecoverySecureKeyInitRequest {
  bytes peer_oprf = 1;
  bytes membership_identifier = 2;
}

message OprfRecoverySecureKeyInitResponse  {
  bytes peer_oprf = 1;

  enum RecoveryResult {
    SUCCEEDED = 0;
    INVALID_CREDENTIALS = 1;
  }

  RecoveryResult result = 2;
  optional string message = 3;
  optional Membership membership = 4;
}

message OprfRecoverySecretKeyCompleteRequest {
  bytes peer_recovery_record = 1;
  bytes membership_identifier = 2;
}

message OprfRecoverySecretKeyCompleteResponse {
  optional string message = 1;
}


message OpaqueSignInInitRequest {
  string phone_number = 1;
  bytes peer_oprf = 2;
}

message OpaqueSignInInitResponse {
  bytes server_oprf_response = 1;
  bytes server_ephemeral_public_key = 2;
  bytes registration_record = 3;
  bytes server_state_token = 4;
  
  optional string message = 5;
  optional int32 minutes_until_retry = 6;
  SignInResult result = 7;
  
  enum SignInResult {
    SUCCEEDED = 0;
    INVALID_CREDENTIALS = 1;
    LOGIN_ATTEMPT_EXCEEDED = 2;
  }
}

message OpaqueSignInFinalizeRequest {
  string phone_number = 1;
  bytes client_ephemeral_public_key = 2;
  bytes client_mac = 3;
  bytes server_state_token = 4;
}

message OpaqueSignInFinalizeResponse {
  bytes server_mac = 1;
  optional Membership membership = 2;
  SignInResult result = 3;
  optional string message = 4;
  optional int32 minutes_until_retry = 5;

  enum SignInResult {
    SUCCEEDED = 0;
    INVALID_CREDENTIALS = 1;
    LOGIN_ATTEMPT_EXCEEDED = 2;
  }
}

message AkeServerState {
  bytes server_ephemeral_private_key_bytes = 1;
  bytes server_ephemeral_public_key = 2;
  bytes client_static_public_key = 3;
  bytes oprf_response = 4;
  string username = 5;
  bytes registration_record = 6;
  google.protobuf.Timestamp expiration = 7;
}

message AkePasswordResetState {
  string username = 1;
  string reset_token = 2;
  google.protobuf.Timestamp expiration = 3;
}

// Password Change Messages
message OpaquePasswordChangeInitRequest {
  string phone_number = 1;
  bytes current_password_oprf = 2;
  bytes new_password_oprf = 3;
}

message OpaquePasswordChangeInitResponse {
  bytes server_oprf_response = 1;
  bytes server_ephemeral_public_key = 2;
  bytes current_registration_record = 3;
  bytes server_state_token = 4;
  
  PasswordChangeResult result = 5;
  optional string message = 6;
  
  enum PasswordChangeResult {
    SUCCEEDED = 0;
    INVALID_CURRENT_PASSWORD = 1;
    RATE_LIMITED = 2;
  }
}

message OpaquePasswordChangeCompleteRequest {
  string phone_number = 1;
  bytes client_ephemeral_public_key = 2;
  bytes client_mac = 3;
  bytes new_registration_record = 4;
  bytes server_state_token = 5;
}

message OpaquePasswordChangeCompleteResponse {
  bytes server_mac = 1;
  PasswordChangeResult result = 2;
  optional string message = 3;
  
  enum PasswordChangeResult {
    SUCCEEDED = 0;
    INVALID_CREDENTIALS = 1;
    RATE_LIMITED = 2;
  }
}

// Session Management Messages
message SessionValidationRequest {
  string session_token = 1;
  string phone_number = 2;
}

message SessionValidationResponse {
  bool is_valid = 1;
  google.protobuf.Timestamp expires_at = 2;
  optional string message = 3;
}

message InvalidateSessionRequest {
  string session_token = 1;
  string phone_number = 2;
}

message InvalidateSessionResponse {
  bool success = 1;
  optional string message = 2;
}

message InvalidateAllSessionsRequest {
  string phone_number = 1;
}

message InvalidateAllSessionsResponse {
  bool success = 1;
  int32 sessions_invalidated = 2;
  optional string message = 3;
}

// Account Recovery Messages  
message AccountRecoveryInitRequest {
  string phone_number = 1;
  string recovery_method = 2; // "sms", "email", etc.
}

message AccountRecoveryInitResponse {
  string recovery_token = 1;
  google.protobuf.Timestamp expires_at = 2;
  RecoveryResult result = 3;
  optional string message = 4;
  
  enum RecoveryResult {
    SUCCEEDED = 0;
    USER_NOT_FOUND = 1;
    RATE_LIMITED = 2;
    METHOD_NOT_AVAILABLE = 3;
  }
}

message AccountRecoveryCompleteRequest {
  string phone_number = 1;
  string recovery_token = 2;
  string verification_code = 3;
  bytes new_registration_record = 4;
}

message AccountRecoveryCompleteResponse {
  RecoveryResult result = 1;
  optional string message = 2;
  
  enum RecoveryResult {
    SUCCEEDED = 0;
    INVALID_TOKEN = 1;
    INVALID_CODE = 2;
    EXPIRED = 3;
  }
}

