syntax = "proto3";
import "common/secure_envelope.proto";
import "account/account_core.proto";

package ecliptix.proto.Account;
option csharp_namespace = "Ecliptix.Protobuf.Account";

service AccountServices {
  rpc OpaqueRegistrationInitRequest(ecliptix.proto.common.SecureEnvelope) returns (ecliptix.proto.common.SecureEnvelope);
  rpc OpaqueRegistrationCompleteRequest(ecliptix.proto.common.SecureEnvelope) returns (ecliptix.proto.common.SecureEnvelope);
  rpc OpaqueRecoverySecretKeyInitRequest(ecliptix.proto.common.SecureEnvelope) returns (ecliptix.proto.common.SecureEnvelope);
  rpc OpaqueRecoverySecretKeyCompleteRequest(ecliptix.proto.common.SecureEnvelope) returns (ecliptix.proto.common.SecureEnvelope);
  rpc OpaqueSignInInitRequest(ecliptix.proto.common.SecureEnvelope) returns (ecliptix.proto.common.SecureEnvelope);
  rpc OpaqueSignInCompleteRequest(ecliptix.proto.common.SecureEnvelope) returns (ecliptix.proto.common.SecureEnvelope);
  rpc Logout(ecliptix.proto.common.SecureEnvelope) returns (ecliptix.proto.common.SecureEnvelope);
}
